--- a/sampleFrom.css
+++ b/sampleFrom.css
@@ -54,7 +54,7 @@ th,td{
   padding: 30px;
 }
 body{
-  background-image: url(D://Tasks/image.jpg);
+  background-image: url(./image.jpg);
 }
 
 .label-wrapper
